feat: add pug support

--- a/pug/partials/scripts.pug
+++ b/pug/partials/scripts.pug
@@ -1,4 +1,4 @@
-// Bootstrap and necessary plugins
+// CoreUI and necessary plugins
 script(src='node_modules/jquery/dist/jquery.min.js')
 script(src='node_modules/popper.js/dist/umd/popper.min.js')
 script(src='node_modules/bootstrap/dist/js/bootstrap.min.js')
