--- a/pug/views/typography.pug
+++ b/pug/views/typography.pug
@@ -17,37 +17,37 @@ block view
             tr
               td
                 p
-                  code.highlighter-rouge <h1></h1>
+                  code.highlighter-rouge= '<h1></h1>'
               td
                 span.h1 h1. Bootstrap heading
             tr
               td
                 p
-                  code.highlighter-rouge <h2></h2>
+                  code.highlighter-rouge= '<h2></h2>'
               td
                 span.h2 h2. Bootstrap heading
             tr
               td
                 p
-                  code.highlighter-rouge <h3></h3>
+                  code.highlighter-rouge= '<h3></h3>'
               td
                 span.h3 h3. Bootstrap heading
             tr
               td
                 p
-                  code.highlighter-rouge <h4></h4>
+                  code.highlighter-rouge= '<h4></h4>'
               td
                 span.h4 h4. Bootstrap heading
             tr
               td
                 p
-                  code.highlighter-rouge <h5></h5>
+                  code.highlighter-rouge= '<h5></h5>'
               td
                 span.h5 h5. Bootstrap heading
             tr
               td
                 p
-                  code.highlighter-rouge <h6></h6>
+                  code.highlighter-rouge= '<h6></h6>'
               td
                 span.h6 h6. Bootstrap heading
     .card
