--- a/pug/views/base/switches.pug
+++ b/pug/views/base/switches.pug
@@ -26,6 +26,12 @@ block view
             label.switch.switch-3d.switch-danger
               input.switch-input(type='checkbox', checked='')
               span.switch-slider
+            label.switch.switch-3d.switch-danger
+              input.switch-input(type='checkbox', checked='', disabled='')
+              span.switch-slider
+            label.switch.switch-3d.switch-danger
+              input.switch-input(type='checkbox', disabled)
+              span.switch-slider
       // /.col
       .col-md-6
         .card
@@ -478,7 +484,7 @@ block view
                       input.switch-input(type='checkbox', checked='')
                       span.switch-slider
                   td
-                    | Add following class 
+                    | Add following class
                     code .switch-lg
                 tr
                   td
@@ -497,7 +503,7 @@ block view
                       input.switch-input(type='checkbox', checked='')
                       span.switch-slider
                   td
-                    | Add following class 
+                    | Add following class
                     code .switch-sm
       // /.col
     // /.row
