--- a/pug/views/base/switches.pug
+++ b/pug/views/base/switches.pug
@@ -26,10 +26,10 @@ block view
             label.switch.switch-3d.switch-danger
               input.switch-input(type='checkbox', checked='')
               span.switch-slider
-            label.switch.switch-3d.switch-danger
+            label.switch.switch-3d.switch-primary
               input.switch-input(type='checkbox', checked='', disabled='')
               span.switch-slider
-            label.switch.switch-3d.switch-danger
+            label.switch.switch-3d.switch-primary
               input.switch-input(type='checkbox', disabled)
               span.switch-slider
       // /.col
@@ -328,22 +328,22 @@ block view
           .card-body
             label.switch.switch-label.switch-primary
               input.switch-input(type='checkbox', checked='')
-              span.switch-slider(data-checked='&#x2713', data-unchecked='&#x2715')
+              span.switch-slider(data-checked='&#x2713;', data-unchecked='&#x2715;')
             label.switch.switch-label.switch-secondary
               input.switch-input(type='checkbox', checked='')
-              span.switch-slider(data-checked='&#x2713', data-unchecked='&#x2715')
+              span.switch-slider(data-checked='&#x2713;', data-unchecked='&#x2715;')
             label.switch.switch-label.switch-success
               input.switch-input(type='checkbox', checked='')
-              span.switch-slider(data-checked='&#x2713', data-unchecked='&#x2715')
+              span.switch-slider(data-checked='&#x2713;', data-unchecked='&#x2715;')
             label.switch.switch-label.switch-warning
               input.switch-input(type='checkbox', checked='')
-              span.switch-slider(data-checked='&#x2713', data-unchecked='&#x2715')
+              span.switch-slider(data-checked='&#x2713;', data-unchecked='&#x2715;')
             label.switch.switch-label.switch-info
               input.switch-input(type='checkbox', checked='')
-              span.switch-slider(data-checked='&#x2713', data-unchecked='&#x2715')
+              span.switch-slider(data-checked='&#x2713;', data-unchecked='&#x2715;')
             label.switch.switch-label.switch-danger
               input.switch-input(type='checkbox', checked='')
-              span.switch-slider(data-checked='&#x2713', data-unchecked='&#x2715')
+              span.switch-slider(data-checked='&#x2713;', data-unchecked='&#x2715;')
       // /.col
       .col-md-6
         .card
@@ -352,22 +352,22 @@ block view
           .card-body
             label.switch.switch-label.switch-pill.switch-primary
               input.switch-input(type='checkbox', checked='')
-              span.switch-slider(data-checked='&#x2713', data-unchecked='&#x2715')
+              span.switch-slider(data-checked='&#x2713;', data-unchecked='&#x2715;')
             label.switch.switch-label.switch-pill.switch-secondary
               input.switch-input(type='checkbox', checked='')
-              span.switch-slider(data-checked='&#x2713', data-unchecked='&#x2715')
+              span.switch-slider(data-checked='&#x2713;', data-unchecked='&#x2715;')
             label.switch.switch-label.switch-pill.switch-success
               input.switch-input(type='checkbox', checked='')
-              span.switch-slider(data-checked='&#x2713', data-unchecked='&#x2715')
+              span.switch-slider(data-checked='&#x2713;', data-unchecked='&#x2715;')
             label.switch.switch-label.switch-pill.switch-warning
               input.switch-input(type='checkbox', checked='')
-              span.switch-slider(data-checked='&#x2713', data-unchecked='&#x2715')
+              span.switch-slider(data-checked='&#x2713;', data-unchecked='&#x2715;')
             label.switch.switch-label.switch-pill.switch-info
               input.switch-input(type='checkbox', checked='')
-              span.switch-slider(data-checked='&#x2713', data-unchecked='&#x2715')
+              span.switch-slider(data-checked='&#x2713;', data-unchecked='&#x2715;')
             label.switch.switch-label.switch-pill.switch-danger
               input.switch-input(type='checkbox', checked='')
-              span.switch-slider(data-checked='&#x2713', data-unchecked='&#x2715')
+              span.switch-slider(data-checked='&#x2713;', data-unchecked='&#x2715;')
       // /.col
       .col-md-6
         .card
@@ -376,22 +376,22 @@ block view
           .card-body
             label.switch.switch-label.switch-outline-primary
               input.switch-input(type='checkbox', checked='')
-              span.switch-slider(data-checked='&#x2713', data-unchecked='&#x2715')
+              span.switch-slider(data-checked='&#x2713;', data-unchecked='&#x2715;')
             label.switch.switch-label.switch-outline-secondary
               input.switch-input(type='checkbox', checked='')
-              span.switch-slider(data-checked='&#x2713', data-unchecked='&#x2715')
+              span.switch-slider(data-checked='&#x2713;', data-unchecked='&#x2715;')
             label.switch.switch-label.switch-outline-success
               input.switch-input(type='checkbox', checked='')
-              span.switch-slider(data-checked='&#x2713', data-unchecked='&#x2715')
+              span.switch-slider(data-checked='&#x2713;', data-unchecked='&#x2715;')
             label.switch.switch-label.switch-outline-warning
               input.switch-input(type='checkbox', checked='')
-              span.switch-slider(data-checked='&#x2713', data-unchecked='&#x2715')
+              span.switch-slider(data-checked='&#x2713;', data-unchecked='&#x2715;')
             label.switch.switch-label.switch-outline-info
               input.switch-input(type='checkbox', checked='')
-              span.switch-slider(data-checked='&#x2713', data-unchecked='&#x2715')
+              span.switch-slider(data-checked='&#x2713;', data-unchecked='&#x2715;')
             label.switch.switch-label.switch-outline-danger
               input.switch-input(type='checkbox', checked='')
-              span.switch-slider(data-checked='&#x2713', data-unchecked='&#x2715')
+              span.switch-slider(data-checked='&#x2713;', data-unchecked='&#x2715;')
       // /.col
       .col-md-6
         .card
@@ -400,22 +400,22 @@ block view
           .card-body
             label.switch.switch-label.switch-pill.switch-outline-primary
               input.switch-input(type='checkbox', checked='')
-              span.switch-slider(data-checked='&#x2713', data-unchecked='&#x2715')
+              span.switch-slider(data-checked='&#x2713;', data-unchecked='&#x2715;')
             label.switch.switch-label.switch-pill.switch-outline-secondary
               input.switch-input(type='checkbox', checked='')
-              span.switch-slider(data-checked='&#x2713', data-unchecked='&#x2715')
+              span.switch-slider(data-checked='&#x2713;', data-unchecked='&#x2715;')
             label.switch.switch-label.switch-pill.switch-outline-success
               input.switch-input(type='checkbox', checked='')
-              span.switch-slider(data-checked='&#x2713', data-unchecked='&#x2715')
+              span.switch-slider(data-checked='&#x2713;', data-unchecked='&#x2715;')
             label.switch.switch-label.switch-pill.switch-outline-warning
               input.switch-input(type='checkbox', checked='')
-              span.switch-slider(data-checked='&#x2713', data-unchecked='&#x2715')
+              span.switch-slider(data-checked='&#x2713;', data-unchecked='&#x2715;')
             label.switch.switch-label.switch-pill.switch-outline-info
               input.switch-input(type='checkbox', checked='')
-              span.switch-slider(data-checked='&#x2713', data-unchecked='&#x2715')
+              span.switch-slider(data-checked='&#x2713;', data-unchecked='&#x2715;')
             label.switch.switch-label.switch-pill.switch-outline-danger
               input.switch-input(type='checkbox', checked='')
-              span.switch-slider(data-checked='&#x2713', data-unchecked='&#x2715')
+              span.switch-slider(data-checked='&#x2713;', data-unchecked='&#x2715;')
       // /.col
       .col-md-6
         .card
@@ -424,22 +424,22 @@ block view
           .card-body
             label.switch.switch-label.switch-outline-primary-alt
               input.switch-input(type='checkbox', checked='')
-              span.switch-slider(data-checked='&#x2713', data-unchecked='&#x2715')
+              span.switch-slider(data-checked='&#x2713;', data-unchecked='&#x2715;')
             label.switch.switch-label.switch-outline-secondary-alt
               input.switch-input(type='checkbox', checked='')
-              span.switch-slider(data-checked='&#x2713', data-unchecked='&#x2715')
+              span.switch-slider(data-checked='&#x2713;', data-unchecked='&#x2715;')
             label.switch.switch-label.switch-outline-success-alt
               input.switch-input(type='checkbox', checked='')
-              span.switch-slider(data-checked='&#x2713', data-unchecked='&#x2715')
+              span.switch-slider(data-checked='&#x2713;', data-unchecked='&#x2715;')
             label.switch.switch-label.switch-outline-warning-alt
               input.switch-input(type='checkbox', checked='')
-              span.switch-slider(data-checked='&#x2713', data-unchecked='&#x2715')
+              span.switch-slider(data-checked='&#x2713;', data-unchecked='&#x2715;')
             label.switch.switch-label.switch-outline-info-alt
               input.switch-input(type='checkbox', checked='')
-              span.switch-slider(data-checked='&#x2713', data-unchecked='&#x2715')
+              span.switch-slider(data-checked='&#x2713;', data-unchecked='&#x2715;')
             label.switch.switch-label.switch-outline-danger-alt
               input.switch-input(type='checkbox', checked='')
-              span.switch-slider(data-checked='&#x2713', data-unchecked='&#x2715')
+              span.switch-slider(data-checked='&#x2713;', data-unchecked='&#x2715;')
       // /.col
       .col-md-6
         .card
@@ -448,22 +448,22 @@ block view
           .card-body
             label.switch.switch-label.switch-pill.switch-outline-primary-alt
               input.switch-input(type='checkbox', checked='')
-              span.switch-slider(data-checked='&#x2713', data-unchecked='&#x2715')
+              span.switch-slider(data-checked='&#x2713;', data-unchecked='&#x2715;')
             label.switch.switch-label.switch-pill.switch-outline-secondary-alt
               input.switch-input(type='checkbox', checked='')
-              span.switch-slider(data-checked='&#x2713', data-unchecked='&#x2715')
+              span.switch-slider(data-checked='&#x2713;', data-unchecked='&#x2715;')
             label.switch.switch-label.switch-pill.switch-outline-success-alt
               input.switch-input(type='checkbox', checked='')
-              span.switch-slider(data-checked='&#x2713', data-unchecked='&#x2715')
+              span.switch-slider(data-checked='&#x2713;', data-unchecked='&#x2715;')
             label.switch.switch-label.switch-pill.switch-outline-warning-alt
               input.switch-input(type='checkbox', checked='')
-              span.switch-slider(data-checked='&#x2713', data-unchecked='&#x2715')
+              span.switch-slider(data-checked='&#x2713;', data-unchecked='&#x2715;')
             label.switch.switch-label.switch-pill.switch-outline-info-alt
               input.switch-input(type='checkbox', checked='')
-              span.switch-slider(data-checked='&#x2713', data-unchecked='&#x2715')
+              span.switch-slider(data-checked='&#x2713;', data-unchecked='&#x2715;')
             label.switch.switch-label.switch-pill.switch-outline-danger-alt
               input.switch-input(type='checkbox', checked='')
-              span.switch-slider(data-checked='&#x2713', data-unchecked='&#x2715')
+              span.switch-slider(data-checked='&#x2713;', data-unchecked='&#x2715;')
       // /.col
       .col-md-12
         .card
